--- a/src/components/organisms/Campaign/Details/detail.module.css
+++ b/src/components/organisms/Campaign/Details/detail.module.css
@@ -5,15 +5,15 @@
 }
 
 .pageWrap {
-  @apply py-10 md:py-16 px-4 md:px-0 mx-auto max-w-screen-xl relative flex flex-wrap items-stretch;
+  @apply py-10 lg:py-16 px-4 lg:px-0 mx-auto max-w-screen-xl relative flex flex-wrap items-stretch;
 }
 
 .pageTitle {
-  @apply text-3xl md:text-5xl font-semibold text-gray-800 mt-0 mb-2 md:mb-8;
+  @apply text-3xl md:text-4xl lg:text-5xl font-semibold text-gray-800 mt-0 mb-2 lg:mb-8;
 }
 
 .pageContent {
-  @apply md:border-r md:border-gray-200 w-full md:w-2/3 md:pr-14;
+  @apply md:border-r md:border-gray-200 w-full md:w-2/3 pr-4 lg:pr-14;
 }
 
 .rootDark .pageContent {
@@ -21,7 +21,7 @@
 }
 
 .pageSidebar {
-  @apply w-full md:w-1/3 md:pl-14;
+  @apply w-full md:w-1/3 pl-4 lg:pl-14;
 }
 
 .rootDark .pageTitle {
