--- a/src/components/organisms/Campaign/Details/detail.module.css
+++ b/src/components/organisms/Campaign/Details/detail.module.css
@@ -70,11 +70,11 @@
 }
 
 .couponNotes {
-  @apply bg-red-100 text-red-700 text-sm flex items-center rounded-lg py-3 px-4;
+  @apply bg-orange-100 text-orange-700 text-sm flex items-center rounded-lg py-3 px-4;
 }
 
 .rootDark .couponNotes {
-  @apply bg-red-200 text-red-800;
+  @apply bg-orange-200 text-orange-800;
 }
 
 .getCoupon {
