--- a/src/components/organisms/Campaign/Details/detail.module.css
+++ b/src/components/organisms/Campaign/Details/detail.module.css
@@ -21,7 +21,7 @@
 }
 
 .pageSidebar {
-  @apply w-full md:w-1/3 pl-4 lg:pl-14;
+  @apply w-full md:w-1/3 md:pl-4 lg:pl-14;
 }
 
 .rootDark .pageTitle {
