--- a/src/components/atoms/Heading/heading.module.css
+++ b/src/components/atoms/Heading/heading.module.css
@@ -8,7 +8,7 @@
 }
 
 .subHeading {
-  @apply max-w-xl mx-auto text-center text-base mb-4 leading-6;
+  @apply max-w-xl mx-auto text-center text-lg mb-4 leading-7;
 }
 
 .subHeadingDark {
