Campaigns listing > Allowed search by keyword and show total found items.

--- a/src/components/organisms/Campaign/List/list.module.css
+++ b/src/components/organisms/Campaign/List/list.module.css
@@ -60,18 +60,20 @@
 }
 
 .toolbarWrap {
-	/*for example only*/
-	padding: 10px 0px;
-	background-color: lightgray;
+	padding: 20px;
+	@apply grid lg:grid-cols-3 gap-6 mt-8;
+}
+
+.toolbarWrap .searchField {
+}
+
+.toolbarWrap .searchField .searchInput {
 }
 
 .toolbarWrap .totalResults {
-
+	text-align: center;
 }
 
 .toolbarWrap .sortWrap {
-
-}
-.toolbarWrap .searchWrap {
-
+	text-align: right;
 }
