Fine-tuning and added codes to allows searching and sorting on campaigns listing.

--- a/src/components/organisms/Campaign/List/list.module.css
+++ b/src/components/organisms/Campaign/List/list.module.css
@@ -67,7 +67,8 @@
 .toolbarWrap .searchField {
 }
 
-.toolbarWrap .searchField .searchInput {
+.searchInput {
+	composes: input from '../../../atoms/TextInput/textInput.module.css'
 }
 
 .toolbarWrap .totalResults {
