--- a/src/components/organisms/Campaign/form.module.css
+++ b/src/components/organisms/Campaign/form.module.css
@@ -99,3 +99,7 @@
 .rdwDatepicker :global(.react-datepicker-wrapper) input:focus {
   @apply shadow-none;
 }
+.loading {
+  text-align: center;
+  padding: 10px;
+}
