--- a/src/components/organisms/Campaign/List/item.module.css
+++ b/src/components/organisms/Campaign/List/item.module.css
@@ -135,3 +135,13 @@
 .rootDark .getCoupon {
 	@apply bg-gray-900 hover:bg-blue-700 border-blue-700 text-white hover:text-white;
 }
+.storeLogo {
+	height: 14px;
+	/*width: 65px;*/
+}
+.storeLink {
+
+}
+.storeName {
+	margin: 0px 0px 0px 10px;
+}
