--- a/src/components/organisms/Campaign/List/list.module.css
+++ b/src/components/organisms/Campaign/List/list.module.css
@@ -1,5 +1,5 @@
 .root {
-	@apply mx-auto max-w-screen-xl py-12 lg:py-24 px-4 lg:px-0;
+	@apply mx-auto max-w-screen-xl py-12 lg:py-24 px-4;
 }
 
 .rootDark {
@@ -18,7 +18,7 @@
 }
 
 .listWrap {
-	@apply grid md:grid-cols-2 lg:grid-cols-3 gap-6 mt-8;
+	@apply grid md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8;
 	overflow: visible !important;
 }
 
