--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,17 @@
 /*@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css');*/
+@import url('//fonts.googleapis.com/css2?family=Noto+Sans:wght@200;300;400;500;600;700;800;900&display=swap');
+@import url('//fonts.googleapis.com/css2?family=Kanit:wght@400;500;600&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer base {
+  html {
+    font-family: 'Noto Sans', sans-serif;
+  }
+}
 
 html {
   height: 100%;
@@ -13,8 +22,11 @@ body {
   @apply antialiased text-gray-700 dark:text-gray-400 bg-white dark:bg-gray-900;
 }
 
-h1 {
+h1, h2, h3, h4, h5 {
+  font-family: 'Kanit', sans-serif;
+}
 
+h1 {
 }
 
 h2 {
