--- a/src/components/organisms/User/myCampaign/item.module.css
+++ b/src/components/organisms/User/myCampaign/item.module.css
@@ -13,3 +13,7 @@
 .storeName {
 
 }
+
+.btnEdit {
+  @apply bg-white border border-gray-300 hover:border-blue-700 hover:bg-blue-700 text-gray-600 hover:text-white text-sm font-semibold rounded-md py-2 px-4 transition-all duration-300;
+}
