--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,5 @@
 /*@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css');*/
-@import url('//fonts.googleapis.com/css2?family=Noto+Sans:wght@200;300;400;500;600;700;800;900&display=swap');
+/* @import url('//fonts.googleapis.com/css2?family=Noto+Sans:wght@200;300;400;500;600;700;800;900&display=swap'); */
 @import url('//fonts.googleapis.com/css2?family=Kanit:wght@400;500;600&display=swap');
 
 @tailwind base;
@@ -7,11 +7,11 @@
 @tailwind utilities;
 
 
-@layer base {
+/* @layer base {
   html {
     font-family: 'Noto Sans', sans-serif;
   }
-}
+} */
 
 html {
   height: 100%;
