--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,6 @@
 /*@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css');*/
 /* @import url('//fonts.googleapis.com/css2?family=Noto+Sans:wght@200;300;400;500;600;700;800;900&display=swap'); */
-@import url('//fonts.googleapis.com/css2?family=Kanit:wght@400;500;600&display=swap');
+/* @import url('//fonts.googleapis.com/css2?family=Kanit:wght@400;500;600&display=swap'); */
 
 @tailwind base;
 @tailwind components;
@@ -22,11 +22,11 @@ body {
   @apply antialiased text-gray-700 dark:text-gray-400 bg-white dark:bg-gray-900;
 }
 
-h1, h2, h3, h4, h5 {
+/* h1, h2, h3 {
   font-family: 'Kanit', sans-serif;
   font-weight: 500;
   letter-spacing: -2px;
-}
+} */
 
 h1 {
 }
