--- a/src/components/organisms/Campaign/Details/detail.module.css
+++ b/src/components/organisms/Campaign/Details/detail.module.css
@@ -1,4 +1,5 @@
 .root {
+  @apply bg-gray-50;
 }
 
 .rootDark {
@@ -13,7 +14,7 @@
 }
 
 .pageContent {
-  @apply md:border-r md:border-gray-200 w-full md:w-2/3 pr-4 lg:pr-14;
+  @apply bg-white rounded-xl w-full md:w-2/3;
 }
 
 .rootDark .pageContent {
