--- a/src/components/organisms/Campaign/Details/detail.module.css
+++ b/src/components/organisms/Campaign/Details/detail.module.css
@@ -199,3 +199,11 @@
 .storeInfo {
 
 }
+
+.howtoSteps::after {
+  @apply bg-blue-100 content-[''] block w-0.5 absolute top-4 bottom-10 left-5 ml-0.5;
+}
+
+.questerAvt {
+  @apply block w-12 h-12 rounded-full flex items-center justify-center font-semibold shadow-sm;
+}
