Process more on Campaign > Cover Image uploading

--- a/src/components/organisms/Uploader/uploader.module.css
+++ b/src/components/organisms/Uploader/uploader.module.css
@@ -24,7 +24,7 @@
 .root .previewItem .thumb {
 
 }
-.root .previewItem .fileAttachment {
+.root .previewItem .fileUploaded {
     margin: 0px 10px 0px 0px;
     font-size: 11px;
 }
