--- a/src/components/organisms/Uploader/uploader.module.css
+++ b/src/components/organisms/Uploader/uploader.module.css
@@ -1,47 +1,61 @@
 .root {
 }
 
-.root .uploaderContainer {
-    @apply flex mb-4 flex-wrap justify-between;
+.uploaderContainer {
+  @apply relative;
+  min-height: 180px;
+}
+
+.root :global(.uploading)::after {
+  @apply content-[''] w-12 h-12 -mt-6 -ml-6 absolute left-1/2 top-1/2 bg-[url('/loading.gif')] bg-cover;
 }
 
 .root :global(.uppy-Container) {
-    width: 100%;
+  width: 100%;
 }
 
 .root :global(.uploading) {
-    opacity: 0.45;
-    pointer-events: none;
-    user-select: none;
+  opacity: 0.45;
+  pointer-events: none;
+  user-select: none;
 }
 
-.root .previewContainer {
-    list-style: none;
-    width: 100%;
+.uploaderContainer > div {
+  @apply absolute top-0 left-0 right-0 bottom-0;
+}
+
+.uploaderContainer button {
+  @apply bg-gray-50 border border-dashed border-gray-400 shadow-none focus:shadow-none;
+}
+
+.previewContainer {
+  @apply bg-gray-100 list-none w-full relative rounded z-10;
+}
+
+.root .previewContainer img {
+  @apply rounded-t-lg;
 }
 
 .root .previewItem {
-    display: inline-block;
-    padding: 10px;
-    margin: 0px 0px 10px 10px;
-    border: 1px solid #d6d6d6;
+  @apply block m-0 p-0 relative;
 }
+
 .root .previewItem .thumb {
-    width: 100%;
+  width: 100%;
 }
+
 .root .previewItem .fileUploaded {
-    margin: 0px 10px 0px 0px;
-    font-size: 11px;
+  @apply inline-block py-2 pl-4;
 }
 
 .root .previewItem .btnDelete {
-    cursor: pointer;
-    font-size: 11px;
+  @apply bg-red-600 hover:bg-red-700 text-white opacity-0 rounded-lg absolute left-1/2 top-1/2 -ml-10 -mt-8 py-2 px-4 text-sm cursor-pointer no-underline transition-all duration-300 hover:no-underline;
 }
-.root .previewItem .btnDelete:hover {
-    text-decoration: underline;
+
+.root .previewItem:hover .btnDelete {
+  @apply opacity-100;
 }
 
 .root :global(.uppy-DragDrop-inner) {
-    padding: 20px;
+  padding: 20px;
 }
