--- a/src/components/organisms/Campaign/Details/detail.module.css
+++ b/src/components/organisms/Campaign/Details/detail.module.css
@@ -207,3 +207,11 @@
 .questerAvt {
   @apply block w-12 h-12 rounded-full flex items-center justify-center font-semibold shadow-sm;
 }
+
+.campaignCover {
+
+}
+
+.campaignThumb {
+
+}
