Update item layout
Update item layout

--- a/src/components/organisms/Campaign/List/item.module.css
+++ b/src/components/organisms/Campaign/List/item.module.css
@@ -7,10 +7,6 @@
 	@apply border-gray-800;
 }
 
-.itemHead {
-	@apply flex items-center;
-}
-
 .couponAmoun {
 	@apply inline-block text-2xl font-bold text-gray-800 mr-4;
 }
@@ -31,6 +27,10 @@
 	@apply ml-auto border border-violet-600 hover:bg-violet-600 hover:text-white hover:border-opacity-0 cursor-pointer rounded-md py-0.5 px-2 transition-all;
 }
 
+.itemContent p {
+	@apply my-0 text-gray-600;
+}
+
 .itemBody {
 	@apply py-4;
 }
@@ -49,7 +49,7 @@
 
 /* All Chains */
 .nftCollectionWrap {
-	@apply border border-gray-200 hover:border-blue-300 rounded-full flex items-center pr-3 pl-1 py-0.5 mr-1 mb-1 relative overflow-hidden;
+	@apply bg-gray-100 rounded-full flex items-center pr-3 pl-1 py-0.5 mr-1 mb-1 relative overflow-hidden;
 }
 
 .rootDark .nftCollectionWrap {
