--- a/src/components/organisms/Uploader/uploader.module.css
+++ b/src/components/organisms/Uploader/uploader.module.css
@@ -40,7 +40,7 @@
   @apply block m-0 p-0 relative;
 }
 
-.root .previewItem .thumb {
+.root .previewItem .previewImage {
   width: 100%;
 }
 
@@ -48,11 +48,11 @@
   @apply inline-block py-2 pl-4;
 }
 
-.root .previewItem .btnDelete {
+.root .previewItem .btnRemove {
   @apply bg-red-600 hover:bg-red-700 text-white opacity-0 rounded-lg absolute left-1/2 top-1/2 -ml-10 -mt-8 py-2 px-4 text-sm cursor-pointer no-underline transition-all duration-300 hover:no-underline;
 }
 
-.root .previewItem:hover .btnDelete {
+.root .previewItem:hover .btnRemove {
   @apply opacity-100;
 }
 
