--- a/src/components/atoms/Heading/heading.module.css
+++ b/src/components/atoms/Heading/heading.module.css
@@ -1,5 +1,5 @@
 .heading {
-  @apply text-3xl md:text-4xl lg:text-5xl font-semibold text-gray-800 text-center mb-6;
+  @apply text-3xl md:text-4xl lg:text-6xl font-extrabold text-gray-900 text-center mb-6;
 }
 
 .headingDark {
@@ -8,7 +8,7 @@
 }
 
 .subHeading {
-  @apply max-w-xl mx-auto text-center text-lg mb-4 leading-7;
+  @apply mx-auto text-center text-2xl font-medium mb-4;
 }
 
 .subHeadingDark {
