--- a/src/components/organisms/Campaign/List/item.module.css
+++ b/src/components/organisms/Campaign/List/item.module.css
@@ -1,5 +1,5 @@
 .root {
-	@apply bg-white shadow hover:border-blue-600 rounded-lg hover:shadow-md transition-shadow flex flex-col items-stretch transition-all duration-500;
+	@apply bg-white border-2 border-gray-800 hover:border-blue-600 rounded-xl transition-shadow flex flex-col items-stretch transition-all duration-500;
 }
 
 .rootDark {
@@ -152,9 +152,9 @@
 }
 
 .dateStart:not(:empty)::before {
-	@apply bg-green-500 content-[''] inline-block h-1.5 w-1.5 rounded-full mr-1.5 mb-0.5;
+	@apply bg-green-500 content-[''] inline-block h-1.5 w-1.5 mr-1.5 mb-0.5;
 }
 
 .dateEnd:not(:empty)::before {
-	@apply bg-red-500 content-[''] inline-block h-1.5 w-1.5 rounded-full mr-1.5 mb-0.5;
+	@apply bg-red-500 content-[''] inline-block h-1.5 w-1.5 mr-1.5 mb-0.5;
 }
