--- a/src/components/organisms/Hero/hero.module.css
+++ b/src/components/organisms/Hero/hero.module.css
@@ -1,4 +1,3 @@
 .heroMask {  
-  /* background: linear-gradient(to top, #9795f0 0%, #fbc8d4 100%); */
-  background-image: linear-gradient(to top, #d9afd9 0%, #97d9e1 100%);
+  /* background: #D3FEEF; */
 }
