--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,17 +1,17 @@
 /*@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css');*/
-/* @import url('//fonts.googleapis.com/css2?family=Noto+Sans:wght@200;300;400;500;600;700;800;900&display=swap'); */
-/* @import url('//fonts.googleapis.com/css2?family=Kanit:wght@400;500;600&display=swap'); */
+@import url('//fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100;200;300;400;500;600;700;800&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 
-/* @layer base {
+@layer base {
   html {
-    font-family: 'Noto Sans', sans-serif;
+    /* font-family: 'Space Mono', monospace; */
   }
-} */
+}
 
 html {
   height: 100%;
@@ -22,21 +22,23 @@ body {
   @apply antialiased text-gray-700 dark:text-gray-400 bg-white dark:bg-gray-900;
 }
 
-/* h1, h2, h3 {
-  font-family: 'Kanit', sans-serif;
-  font-weight: 500;
-  letter-spacing: -2px;
-} */
+h1, h2, h3 {
+  font-family: 'Big Shoulders Display', cursive;
+}
+
+.space-mono {
+  font-family: 'Space Mono', monospace;
+}
 
 h1 {
 }
 
 h2 {
-  @apply my-4 font-semibold text-2xl;
+  @apply my-4 font-bold text-2xl;
 }
 
 h3 {
-  @apply my-6 font-semibold text-xl;
+  @apply my-6 font-bold text-xl;
 }
 
 p {
