--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,5 @@
 /*@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css');*/
-@import url('//fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('//fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100;200;300;400;500;600;700;800&display=swap');
 
 @tailwind base;
