--- a/src/components/organisms/Campaign/Details/Rewards/Quest/quest.module.css
+++ b/src/components/organisms/Campaign/Details/Rewards/Quest/quest.module.css
@@ -31,3 +31,23 @@
 .contractAdd {
     composes: contractAdd from '../../../List/item.module.css';
 }
+
+.twitterLoginTask {
+    @apply flex items-center font-semibold mb-3;
+}
+
+.btnTwitterLogin {
+    @apply bg-sky-400 hover:bg-sky-500 text-white flex items-center text-sm font-medium rounded-full py-1.5 pl-3 pr-4 ml-2 transition duration-300
+}
+
+.twitterFollowTask {
+   @apply bg-gray-50 text-sm font-medium flex items-center border border-red-500 hover:border-red-500 rounded-lg py-3 px-4 hover:shadow-sm transition-all duration-300 mb-3
+}
+
+.twitterRetweetTask {
+    @apply bg-gray-50 text-sm font-medium flex items-center border border-gray-200 hover:border-blue-600 rounded-lg py-3 px-4 hover:shadow-sm transition-all duration-300
+}
+
+.nftOwnershipTask {
+
+}
