Campaign > Details >Added more process for checking required tasks

--- a/src/components/organisms/Campaign/Details/Rewards/Quest/quest.module.css
+++ b/src/components/organisms/Campaign/Details/Rewards/Quest/quest.module.css
@@ -42,7 +42,12 @@
 }
 
 .twitterFollowTask {
-   @apply bg-gray-50 text-sm font-medium flex items-center border border-red-500 hover:border-red-500 rounded-lg py-3 px-4 hover:shadow-sm transition-all duration-300 mb-3
+   @apply bg-gray-50 text-sm font-medium flex items-center border rounded-lg py-3 px-4 hover:shadow-sm transition-all duration-300 mb-3
+}
+
+.twitterFollowTaskError {
+    composes: twitterFollowTask;
+    @apply border-red-500 hover:border-red-500;
 }
 
 .twitterRetweetTask {
