--- a/src/components/organisms/Campaign/Details/Rewards/Quest/quest.module.css
+++ b/src/components/organisms/Campaign/Details/Rewards/Quest/quest.module.css
@@ -61,3 +61,15 @@
 .btnVerifyTwitter {
     @apply ml-auto;
 }
+.btnClaimRewardWrap {
+    @apply py-4 px-4;
+}
+.btnClaimReward {
+    @apply bg-blue-500 hover:bg-blue-600 text-white block py-2.5 px-4 text-center rounded-lg transition-all duration-300 w-full;
+}
+.btnClaimRewardDisabled {
+    composes: btnClaimReward;
+    @apply bg-gray-600 hover:bg-gray-600;
+    cursor: not-allowed;
+    pointer-events: none;
+}
