--- a/src/components/organisms/Campaign/Details/Rewards/Quest/quest.module.css
+++ b/src/components/organisms/Campaign/Details/Rewards/Quest/quest.module.css
@@ -2,37 +2,6 @@
     @apply bg-white shadow-sm rounded-lg mb-6
 }
 
-.bsc {
-    @apply bg-gray-100 inline-block rounded-full mr-2 w-6 h-6 indent-96 overflow-hidden bg-[url('/chains/bsc.svg')] bg-cover;
-}
-
-.ethereum {
-    @apply bg-gray-100 inline-block rounded-full mr-2 w-6 h-6 indent-96 overflow-hidden bg-[url('/chains/ethereum.svg')] bg-cover;
-}
-
-.polygon {
-    @apply bg-gray-100 inline-block rounded-full mr-2 w-6 h-6 indent-96 overflow-hidden bg-[url('/chains/polygon.svg')] bg-cover;
-}
-
-.solana {
-    @apply bg-gray-100 inline-block rounded-full mr-2 w-6 h-6 indent-96 overflow-hidden bg-[url('/chains/solana.svg')] bg-cover;
-}
-.nftCollectionWrap {
-    composes: nftCollectionWrap from '../../../List/item.module.css';
-    @apply flex items-center;
-}
-
-.nftCollectionLink {
-}
-
-.collectionName {
-    composes: collectionName from '../../../List/item.module.css';
-}
-
-.contractAdd {
-    composes: contractAdd from '../../../List/item.module.css';
-}
-
 .twitterLoginTask {
     @apply flex items-center font-semibold mb-3;
 }
@@ -72,4 +41,7 @@
     @apply bg-gray-600 hover:bg-gray-600;
     cursor: not-allowed;
     pointer-events: none;
+}
+.taskIndex {
+    margin: 10px;
 }
