--- a/src/components/atoms/Heading/heading.module.css
+++ b/src/components/atoms/Heading/heading.module.css
@@ -1,5 +1,5 @@
 .heading {
-  @apply text-3xl md:text-4xl lg:text-6xl font-extrabold text-gray-900 text-center mb-6;
+  @apply text-3xl md:text-4xl lg:text-6xl font-semibold text-gray-900 text-center mb-4 tracking-tight;
 }
 
 .headingDark {
@@ -8,7 +8,7 @@
 }
 
 .subHeading {
-  @apply mx-auto text-center text-xl font-medium mb-4;
+  @apply text-gray-800 mx-auto text-center text-xl font-medium;
 }
 
 .subHeadingDark {
