--- a/src/components/atoms/Heading/heading.module.css
+++ b/src/components/atoms/Heading/heading.module.css
@@ -1,5 +1,5 @@
 .heading {
-  @apply text-3xl md:text-4xl lg:text-6xl font-semibold text-gray-900 text-center mb-4 tracking-tight;
+  @apply text-3xl md:text-4xl lg:text-6xl font-bold text-gray-900 text-center mb-4 tracking-tight;
 }
 
 .headingDark {
