--- a/src/components/organisms/Campaign/List/item.module.css
+++ b/src/components/organisms/Campaign/List/item.module.css
@@ -1,5 +1,5 @@
 .root {
-	@apply bg-white border-2 border-gray-800 hover:border-blue-600 rounded-xl transition-shadow flex flex-col items-stretch transition-all duration-500;
+	@apply bg-white border-2 border-transparent shadow-md hover:border-violet-600 rounded-2xl transition-shadow flex flex-col items-stretch transition-all duration-500;
 }
 
 .rootDark {
@@ -8,7 +8,7 @@
 }
 
 .root:hover .getCoupon {
-	@apply bg-blue-600 text-white;
+	@apply bg-violet-600 text-white;
 }
 
 .couponAmoun {
