--- a/src/components/organisms/Campaign/Details/detail.module.css
+++ b/src/components/organisms/Campaign/Details/detail.module.css
@@ -43,7 +43,7 @@
 }
 
 .campaignMeta {
-  @apply border-b border-gray-200 flex items-center justify-start pb-4 gap-6;
+  @apply border-b border-gray-200 flex items-center justify-start pb-4 mb-6 gap-6;
 }
 
 .pageSidebar {
