--- a/src/components/organisms/Header/header.module.css
+++ b/src/components/organisms/Header/header.module.css
@@ -1,5 +1,5 @@
 .root {
-  @apply bg-white md:sticky top-0 px-4 lg:px-6 py-3.5 space-x-4 z-20 text-sm font-medium;
+  @apply border-b border-b-gray-200 bg-white md:sticky top-0 px-4 lg:px-6 py-3.5 space-x-4 z-20 text-sm font-medium;
 }
 
 .rootDark {
