--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
 /*@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css');*/
 /* @import url('//fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700&display=swap'); */
 /* @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100;200;300;400;500;600;700;800&display=swap'); */
-@import url('http://fonts.cdnfonts.com/css/pt-root-ui');
+@import url('//fonts.cdnfonts.com/css/pt-root-ui');
 
 
 @tailwind base;
