--- a/src/components/organisms/Campaign/Details/Rewards/rewards.module.css
+++ b/src/components/organisms/Campaign/Details/Rewards/rewards.module.css
@@ -2,23 +2,24 @@
 }
 
 .bsc {
-    @apply bg-gray-100 inline-block rounded-full mr-2 w-6 h-6 indent-96 overflow-hidden bg-[url('/chains/bsc.svg')] bg-cover;
+  @apply bg-gray-100 inline-block rounded-full mr-2 w-6 h-6 indent-96 overflow-hidden bg-[url('/chains/bsc.svg')] bg-cover;
 }
 
 .ethereum {
-    @apply bg-gray-100 inline-block rounded-full mr-2 w-6 h-6 indent-96 overflow-hidden bg-[url('/chains/ethereum.svg')] bg-cover;
+  @apply bg-gray-100 inline-block rounded-full mr-2 w-6 h-6 indent-96 overflow-hidden bg-[url('/chains/ethereum.svg')] bg-cover;
 }
 
 .polygon {
-    @apply bg-gray-100 inline-block rounded-full mr-2 w-6 h-6 indent-96 overflow-hidden bg-[url('/chains/polygon.svg')] bg-cover;
+  @apply bg-gray-100 inline-block rounded-full mr-2 w-6 h-6 indent-96 overflow-hidden bg-[url('/chains/polygon.svg')] bg-cover;
 }
 
 .solana {
-    @apply bg-gray-100 inline-block rounded-full mr-2 w-6 h-6 indent-96 overflow-hidden bg-[url('/chains/solana.svg')] bg-cover;
+  @apply bg-gray-100 inline-block rounded-full mr-2 w-6 h-6 indent-96 overflow-hidden bg-[url('/chains/solana.svg')] bg-cover;
 }
+
 .nftCollectionWrap {
-    composes: nftCollectionWrap from '../../List/item.module.css';
-    @apply flex items-center;
+  composes: nftCollectionWrap from '../../List/item.module.css';
+  @apply flex items-center;
 }
 
 .nftCollectionLink {
@@ -34,4 +35,8 @@
 
 .rewardOverview p {
   @apply my-0;
+}
+
+.rewardOverview p + p {
+    @apply mt-4;
 }
