--- a/src/components/organisms/Campaign/Related/related.module.css
+++ b/src/components/organisms/Campaign/Related/related.module.css
@@ -14,8 +14,8 @@
   composes: boxBody from '../../Campaign/Details/detail.module.css';
 }
 
-.couponList {
-  composes: couponList from '../../Campaign/Details/detail.module.css';
+.campaignList {
+
 }
 
 .infiniteFinished {
