--- a/src/components/organisms/Campaign/Details/Rewards/HowClaim/howClaim.module.css
+++ b/src/components/organisms/Campaign/Details/Rewards/HowClaim/howClaim.module.css
@@ -11,3 +11,7 @@
 .howtoSteps::after {
   @apply bg-blue-100 content-[''] block w-0.5 absolute top-4 bottom-10 left-5 ml-0.5;
 }
+
+.howToClaim {
+
+}
